Added partial pages and validations

--- a/RPInventory/appsettings.json
+++ b/RPInventory/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
+  "RecordsPerPage" :  2,
   "ConnectionStrings": {
     "InventoryContext": "Server=(localdb)\\mssqllocaldb;Database=InventoryContext-edf82708-77d2-4d11-b86e-eb561d486fe2;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
