--- a/RPInventory/appsettings.json
+++ b/RPInventory/appsettings.json
@@ -9,5 +9,21 @@
   "RecordsPerPage" :  2,
   "ConnectionStrings": {
     "InventoryContext": "Server=(localdb)\\mssqllocaldb;Database=InventoryContext-edf82708-77d2-4d11-b86e-eb561d486fe2;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information"
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/rpinventory-.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ]
   }
 }
